syntax = "proto3";

package users.proto;

option go_package = "github.com/Posrabi/flashy/protos/users";
option java_package = "com.flashy";

service UsersAPI {

  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
  }

  rpc GetUser(GetUserRequest) returns (GetUserResponse) {
  }

  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {
  }

  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {
  }

  rpc LogIn(LogInRequest) returns (LogInResponse) {
  }

  rpc LogOut(LogOutRequest) returns (LogOutResponse) {
  }

}

message User {
  string user_name = 1;
  string hash_password = 2;
  string name = 3;
  string email = 4;
  string phone_number = 5;
  string auth_token = 6;
  string user_id = 7;
}

message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse {
  User user = 1;
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  User user = 1;
}

message UpdateUserResponse {
  string response = 1;
}

message DeleteUserRequest {
  string user_id = 1;
  string hash_password = 2;
}

message DeleteUserResponse {
  string response = 1;
}

message LogInRequest {
  string user_name = 1;
  string hash_password = 2;
}

message LogInResponse {
  User user = 1;
}

message LogOutRequest {
  string user_id = 2;
}

message LogOutResponse {
  string response = 1;
}
